syntax = "proto3";

package hello;

option go_package = "/proto";

message SayHelloRequest {}

message SayHelloResponse {
  string body = 1;
}

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
}

message GetListingRequest {
  int64 id = 1;
}

message GetListingResponse {
  int64 id = 1;
  string address = 2;
  float price = 3;
  float floorArea = 4;
  float lotArea = 5;
}

service ListingService {
  rpc GetListing (GetListingRequest) returns (GetListingResponse);
}