syntax = "proto3";

package listing;

option go_package = "gitlab.com/shanemaglangit/homagochi/backend/internal/protobuf";

import "listing.proto";

message GetListingsRequest {}

message GetListingsResponse {
  repeated Listing listings = 1;
}

service ListingService {
  rpc GetListings (GetListingsRequest) returns (GetListingsResponse);
}